--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
