--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.16.0",
     "firebase": "^7.16.0",
+    "image-extensions": "^1.1.0",
+    "is-hotkey": "^0.2.0",
+    "is-url": "^1.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "slate": "^0.59.0",
+    "slate-history": "^0.59.0",
     "slate-react": "^0.59.0",
     "styled-components": "^5.1.1"
   },
